openmediavault (6.4.1-1) stable; urgency=low

  * Respect timezone when exposing shared folder snapshots to
    Windows clients as shadow copies via Samba.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 May 2023 01:20:05 +0200

openmediavault (6.4.0-3) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Upgrade to Angular 14.
  * Improve omv-btrfs-scrub and scheduled Btrfs error checks.
    Deduplicate file system UUID to prevent unnecessary work.
  * Configure DHCP overrides in Netplan.io.
  * Fix bug in the bonding network interface configuration page.
    The `Primary` field is only used by the `active-backup`,
    `balance-tlb` and `balance-alb` modes.
  * Improve DNS configuration. systemd-resolved is now fully
    responsible for network name resolution.
  * Add snapshot lifecycle management to clean up snapshots of shared
    folders according to given rules. The tool `omv-sfsnapadm` is
    called hourly by a cron job to do the cleanup. The settings can
    be found at `Storage | Shared Folders | All Snapshots` in the UI.
    This feature is disabled by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 May 2023 14:54:50 +0200

openmediavault (6.3.12-1) stable; urgency=low

  * Prevent custom network interface search domain settings from
    being overwritten by settings provided via DHCP.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 15 May 2023 20:44:19 +0200

openmediavault (6.3.11-2) stable; urgency=low

  * Update locale files.
  * Upgrade Salt to version 3005.1.
  * Issue #1485: Add option to enforce transport encryption per SMB
    share. Defaults to disabled.
  * Issue #1542: Add transmit hash policy support to bond network
    interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Apr 2023 19:09:12 +0200

openmediavault (6.3.10-2) stable; urgency=low

  * Issue #1537: `findmnt` is using tree-like output on some systems